--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
+# EDA Libraries
+pandas==1.3.3
+numpy==1.21.2
+plotly==5.3.1
+seaborn==0.11.2
+matplotlib==3.4.3
+
+# Data Preprocessing Libraries
+datasist==1.5
+scikit-learn==0.24.2
+category-encoders==2.2.2
+imbalanced-learn==0.8.1
+
+# Machine Learning (Classification Models) Libraries
+lightgbm==3.3.0
+xgboost==1.4.2
+
+# Model Deployment Libraries
 joblib==1.0.1
 streamlit==1.14.0
-pandas==1.3.3
