--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ matplotlib==3.4.3
 
 # Data Preprocessing Libraries
 datasist==1.5
-scikit-learn==0.24.2
+sklearn==1.2.2
 category-encoders==2.2.2
 imbalanced-learn==0.8.1
 
@@ -18,3 +18,4 @@ xgboost==1.4.2
 # Model Deployment Libraries
 joblib==1.2.0
 streamlit==1.27.2
+
