--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ matplotlib==3.4.3
 
 # Data Preprocessing Libraries
 datasist==1.5
+scikit-learn==1.3.2
 category-encoders==2.2.2
 imbalanced-learn==0.8.1
 
