--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,15 @@
-# EDA Libraries
-pandas==1.5.3
-numpy==1.24.1
-plotly==5.3.1
-seaborn==0.11.2
-matplotlib==3.4.3
-
-# Data Preprocessing Libraries
-datasist==1.5
-scikit-learn==1.3.2
-category-encoders==2.2.2
-imbalanced-learn==0.8.1
-
-# Machine Learning (Classification Models) Libraries
-lightgbm==3.3.0
-xgboost==1.4.2
-
-# Model Deployment Libraries
-joblib==1.2.0
-streamlit==1.27.2
-
+pandas
+numpy
+plotly
+seaborn
+matplotlib
+pycountry
+datasist
+scikit-learn
+imbalanced-learn
+category-encoders
+imblearn
+lightgbm
+xgboost
+joblib
+streamlit
